--- a/docs/D2/D2.org
+++ b/docs/D2/D2.org
@@ -2,7 +2,7 @@
 #+author: Devin Pohl
 #+author: Daniel Garcia
 #+date: 4/1/2021
-#+description: Team composition and idea proposal
+#+description: Semester Project: midway report on current progress
 
 # This whole section is setup for org-mode formatting; no content here
 # This has been copied and modified from one of @Shizcow's academic essays
@@ -101,13 +101,17 @@ Once hardware development is complete, the movement commands can be implemented.
 #  - Limitations like resolution, accuracy or response time
 #  - Cost and marketability of a device based on your project
 
-For this project, we have chosen to evaluate the /limitations/ and /cost/ attributes.
+For this project, we have chosen to evaluate the /Limitations/ and /Cost/ attributes.
 This section will give an overview and analysis of each in turn.
 
 ** DONE Limitations
 
 Both the current test stages and the envisioned final product of this project will have significant limitations.
-The first is in processing power. As this device is meant to be small, relatively low-cost, and passively cooled, the Raspberry Pi 3 A+ is one of a few great choices here. And while it is more than able to meet the base requirements (video processing, interfacing with peripherals, network communication) expandability is rather low. As such, far-future stretch goals such as fully autonomous driving, peer-to-peer swarm communication, and full server hosting may not be attainable without significant engineering. A second limitation is in the choice of hosting. The current iteration of the project uses Twitch for controlling the bot over long distances. While this is a relatively easy solution to execute, Twitch struggles with low-latency streaming. As such, although the bot is able to push video feed with very low latency, Twitch is bottlenecking the stream delay. During testing, we measured this delay to be between 3 and 7 seconds. Another limitation of Twitch streaming is resolution and bit-rate. While the bot can just reach 60fps 1080p streams, Twitch throttles incoming connections to specific resolutions, bitrates, and framerates. After some testing, we Twitch would only display what is (after bitrate compression) approximately 720p at a locked 24fps. Future iterations of this design using custom streaming servers may be able to overcome all the limitations we have been experiencing with Twitch.
+The first is in processing power. As this device is meant to be small, relatively low-cost, and passively cooled, the Raspberry Pi 3 A+ is one of a few great choices here. And while it is more than able to meet the base requirements (video processing, interfacing with peripherals, network communication) expandability is rather low. As such, far-future stretch goals such as fully autonomous driving, peer-to-peer swarm communication, and full server hosting may not be attainable without significant engineering.
+
+A second limitation is in the choice of hosting. The current iteration of the project uses Twitch for controlling the bot over long distances. While this is a relatively easy solution to execute, Twitch struggles with low-latency streaming. As such, although the bot is able to push video feed with very low latency, Twitch is bottlenecking the stream delay. During testing, we measured this delay to be between 3 and 7 seconds.
+
+Another limitation of Twitch streaming is resolution and bit-rate. While the bot can just reach 60fps 1080p streams, Twitch throttles incoming connections to specific resolutions, bitrates, and framerates. After some testing, we Twitch would only display what is (after bitrate compression) approximately 720p at a locked 24fps. Future iterations of this design using custom streaming servers may be able to overcome all the limitations we have been experiencing with Twitch.
 
 ** TODO Cost
   
@@ -121,7 +125,7 @@ All components are purchased from various EBay stores, with shipping times betwe
 #+ATTR_LATEX: :align r|lr|p{6.5cm}|r
 | Amount | Component         | Price Ea ($) | Description                                              | Cost ($) |
 |--------+-------------------+--------------+----------------------------------------------------------+----------|
-|      2 | Drivers           |         3.16 | A4988 Stepper Motor Driver Module                        |     6.33 |
+|      2 | Drivers           |         3.16 | A4988 Stepper Motor Driver Module                        |     6.32 |
 |      2 | Motors            |         3.98 | MINEBEA NMB 2-phase 4-Wire 18\textdegree{} Stepper Motor |     7.96 |
 |      1 | Amp               |         4.99 | MAX98357A I2S Class D amplifier                          |     4.99 |
 |      1 | Speaker           |         0.99 | 8 ohm speaker                                            |     0.99 |
@@ -138,8 +142,8 @@ All components are purchased from various EBay stores, with shipping times betwe
 |      1 | PLA Filament      |         5.00 | 100g Black PLA filament 1.75 mm                          |     5.00 |
 |      1 | PCB               |         8.00 | 5 Custom PCBs from EASY EDA                              |     8.00 |
 |--------+-------------------+--------------+----------------------------------------------------------+----------|
-|        |                   |              | Total:                                                   |    107.3 |
-#+TBLFM: @>$>=vsum(@<<..@>>)
+|        |                   |              | Total:                                                   |   107.29 |
+#+TBLFM: @>$>='(format "%.2f" (apply '+ '(@<<..@>>)));N::@<<$>..@>>$>='(format "%.2f" (* $< $<<<));N
 
 #+latex: \normalsize
 #+end_center
