--- a/docs/D2/D2.org
+++ b/docs/D2/D2.org
@@ -99,12 +99,16 @@ To connect all the sensors and actuators effectively, a PCB was designed to fit 
 
 [[./CircuitDiagram.png]]
 
- Soon after completing the design, the PCB was digitally wired. This process took longer than expected due to issues confirming I2S pins. After the I2S pins were confirmed, we proceeded to complete the missing connections and starting searching for design flaws. A few minor flaws were encountered and resolved. The following image is a screenshot of the final PCB layout. 
+#+latex: \clearpage
 
+Soon after completing the design, the PCB was digitally wired. This process took longer than expected due to issues confirming I2S pins. After the I2S pins were confirmed, we proceeded to complete the missing connections and starting searching for design flaws. A few minor flaws were encountered and resolved. The following image is a screenshot of the final PCB layout. 
+
+#+ATTR_LATEX: :height 6.5cm :center t
 [[./PCBDiagram.png]]
 
-Once satisfied with the design, the file was sent to a manufacturer. We decided to go for JLCPCB for manufacturing due to previous positive experiences with the company and low prices. As of right now, the PCBs have been approved, manufactured, and shipped. We are currently waiting for delivery. The following screenshots are a preview of the PCBs.
+Once satisfied with the design, the file was sent to a manufacturer. We decided to go for JLCPCB for manufacturing due to previous positive experiences with the company and low prices. As of right now, the PCBs have been approved, manufactured, and shipped. We are currently waiting for delivery. The following screenshot is a preview of the PCBs.
 
+#+ATTR_LATEX: :height 7.5cm :center t
 [[./PCB.png]]
 
 We are expecting the PCBs to arrive within the next week. Once delivered, we will proceed to solder and test the final results.
@@ -114,15 +118,20 @@ We are expecting the PCBs to arrive within the next week. Once delivered, we wil
 The project requires an enclosure to fit all the components. Because of this, we designed a case using AutoCAD. For this, all components such as motors, batteries, and buttons were measured and replicated into this software. In the meantime, the PCB was also under design. Because of this, the case was being designed at the same time to fit new spacing needs. The robot case was designed into three levels which are further discussed below.
 
 - Electromechanical, and power supply (Bottom layer): This level holds the stepper motors, batteries, caster, charging port, and wheels. The batteries were also placed at this level to lower its center of mass and increase stability.
-- Electronics (Middle Layer): This layer holds all the fragile electronics. This layer is separated from the motors and the batteries. This was done as a protection EMF and increase the distance from the motors. The microphone and speakers are also in this layer, this also is an attempt to reduce the noise from the motors.
+- Electronics (Middle Layer): This layer holds all the fragile electronics. This layer is separated from the motors and the batteries. This was done as a protection EMF and increase the distance from the motors. The microphone and speakers are also in this layer; this also is an attempt to reduce the noise from the motors.
 - Camera (Top Layer): This layer contains the camera, the display, and the servo only. This was done to avoid wire tangling while also providing a cleaner look. This layer also holds the clear plastic dome that encapsulates the device while also making it easy to view around.  
 
-The following screenshots shows a preview of the design. 
+The following screenshots show a preview of the design.
+
+#+ATTR_LATEX: :width \textwidth :center t
 [[./Unassembled.png]]
 
+#+begin_center
+#+ATTR_LATEX: :height 7.5cm :center
 [[./Assembled.png]]
-
+#+ATTR_LATEX: :height 7.5cm :center
 [[./Assembled2.png]]
+#+end_center
 
 Once the design was done, some of the parts were printed to test the dimensions. Currently, we are still printing a few pieces to accommodate updates in the PCB and designs in issues with measurements. Overall, the current renders show a close resemblance to the final product.
 
@@ -148,13 +157,16 @@ Another limitation of Twitch streaming is resolution and bit-rate. While the bot
 After looking at the total price, the device may seem expensive at around 110 USD but can get reduced. If decided to be done on a larger scale, the final total could be well under 70 dollars. This lower price can be explained through the following points:
  - Components: Many of these components were purchased individually. Purchasing in smaller quantities increases the price drastically. If components are purchased in higher quantities, prices can be decreased. 
  - Different components: Some components are also good candidates to be replaced with cheaper and higher quality ones. Because of time constraints, we used popular components. Due to the popularity these components had high demand, there were quite pricey. 
- - Lack of time: Because of this, some devices like the raspberry pi could have been integrated directly into the PCB, and thus reduce its price significantly. 
+ - Lack of time: Because of this, some devices like the Raspberry Pi could have been integrated directly into the PCB, and thus reduce its price significantly. 
 
 Another component of the device is marketability. Due to the modular port underneath the device, it can serve a wide range of people. The modular port can be connected to other devices and increase its functionality. Some examples can be a robot sweeper, mopper, surveillance, long-distance calls, etc.
 
+\clearpage
+
 * DONE Bill of Materials
 Below is a bill of materials for this project, including all hardware used.
-All components are purchased from various EBay stores, with shipping times between one and three weeks.
+At this point, all components except the custom PCBs are in hand.
+We expect the PCB to arrive in 1-2 weeks.
 
 #+begin_center
 #+latex: \footnotesize
