--- a/docs/D3/D3.org
+++ b/docs/D3/D3.org
@@ -2,9 +2,8 @@
 # #+author: Devin Pohl
 # #+author: Daniel Garcia
 #+date: 4/30/2021
-#+description: Semester Project: midway report on current progress
+#+description: Project is done, time to get our grade and get out
 
-# This whole section is setup for org-mode formatting; no content here
 * Org Preamble                                                       :ignore:
 ** Org Options                                                      :ignore:
 # Do not export table of contents
@@ -39,14 +38,12 @@
 #+begin_src latex :tangle authorhacks.sty :exports none
 \author{\IEEEauthorblockN{Devin Pohl}
   \IEEEauthorblockA{
-    College of Engineering\\
     Department of Electrical and Computer Engineering\\
     Colorado State University\\
     Email: \href{mailto:Devin.Pohl@colostate.edu}{Devin.Pohl@colostate.edu}}
   \and
   \IEEEauthorblockN{Daniel Garcia}
   \IEEEauthorblockA{
-    College of Natural Sciences\\
     Department of Computer Science\\
     Colorado State University\\
     Email: \href{mailto:daniel95@rams.colostate.edu}{daniel95@rams.colostate.edu}}}
@@ -69,31 +66,62 @@ code developed will also need to be submitted.
 This report should be between 1500-2500 words excluding references. The report must include several
 elements, each of which will be a separate section. These are already outlined in this document.
 #+end_comment
-* TODO Abstract                                                      :ignore:
+
+* DONE Abstract                                                      :ignore:
 #+begin_comment
 Compact one-paragraph overview of the project
 #+end_comment
+
+# this block generates the correct formatting, hence the :ignore:
 #+begin_abstract
-This is test writing to get the formatting right
+This project presents a small, remote controlled robot.
+This robot, nicknamed the "Boo-Bot" by the authors, is capable of sending real-time video/audio and taking real-time controls over the internet, allowing it to be controlled from anywhere with a network connection.
+This is showcased by a specific development of the project: interfacing over a Twitch live-stream.
+Throughout development this project has been made as from-scratch as possible.
+This has included designing of circuitry, PCBs, and 3D printed parts, as well as significant programming for drivers, communication, and interaction.
 #+end_abstract
-* TODO Introduction
+
+* DONE Introduction
 #+begin_comment
-wee
+No description was provided so I'm winging it
+
+Abstract but longer:
+- What is the bot?
+  - Why did we make it?
+  - What have we done?
+- Was this project a success?
 #+end_comment
-This is a test for citation cite:pohl-2021-shizc-boobot to see it working.
+
+Built as a semester project for CS 370, Colorado State University's Operating Systems Course, /Boo-Bot/ is a robot: small, self-contained, remote-controlled, high-quality, and designed from the ground up.
+It is made to answer the lack of a cheap, commercially available, semi-autonomous, long-distance, highly-portable IOT device for animate telecommunication.
+Despite the numerous challenges encountered during development, the final product is considered a successful implementation, providing significant learning experiences for the authors.
+In design and construction, the device provided key insights into areas of robotics, circuitry, and of course, operating systems.
+This paper provides an overview on why this project exists, the process of its design, and how that design was implemented.
+
+There are two main areas of development in this project: hardware and software.
+The first area, hardware, took the most time.
+Between custom designing a PCB to drive several peripherals, and designing and 3D printing the chassis, a diverse set of skills were required.
+The second area, software, was not without its developments.
+With components including GPIO interfacing, IRC communication, video streaming, and operating system interfacing, a healthy mix of written-from-scratch software, libraries, and complete pre-existing software was employed.
+Adding that all the software written requires non-trivial cross-compilation, several learning opportunities presented themselves.
+
 * TODO Problem Characterization
 #+begin_comment
 This is a technical description of the problem. Your audience is
 your peers so present it in a way that they can appreciate.
 #+end_comment
+
+
+
 * TODO Proposed Solution and Implementation Strategy
 #+begin_comment
 Include i. Methodology and ii. a description of the libraries that you have used and what you did on your own.
 #+end_comment
 ** TODO Methodology
 ** TODO Software
+** TODO Hardware
 * TODO Conclusions
-* TODO Bibliography :ignore:
-# org-mode headings >>> whatever natbib does
+* DONE Bibliography                                                  :ignore:
+# cite generates its own (correct) references heading, hence the :ignore:
 bibliographystyle:IEEEtranS
 bibliography:references.bib
